remove align items center causing ie11 bug
text was overflowing

--- a/src/scss/pardot-place-template.scss
+++ b/src/scss/pardot-place-template.scss
@@ -431,7 +431,6 @@ img {
   overflow: hidden;
   text-align: center;
   display: flex;
-  align-items: center;
   flex-direction: column;
   justify-content: center;
   z-index: 2;
